debian-timeline (18) UNRELEASED; urgency=low

  * Debcamp11 happened in 2011, not 2010. Thanks to Anders Jackson
    <anders.jackson@hig.se>.
  * Add __history__.html for simile.
  * Add BSP entries from Paul Wise.

 -- Chris Lamb <lamby@debian.org>  Fri, 13 Jan 2012 14:53:25 +0000

debian-timeline (17) unstable; urgency=low

  * Add:
    - "Anthony Towns steps down as Release Manager" (Closes: #655147)
    - "Resolution to declassify debian-private passed" (Closes: #655149)

 -- Chris Lamb <lamby@debian.org>  Tue, 10 Jan 2012 17:19:25 +0000

debian-timeline (16) unstable; urgency=low

  * Bump Standards-Version to 3.9.2.
  * Add events from Paul Wise <pabs@debian.org>:
    - Add DebConf11 and DebCamp11
    - A new version of debian-policy was released
    - armhf and s390x architectures added
    - Fix the squeeze release era URL
    - Many more bugs were filed
    - Stefano was re-elected as DPL
  * Add event from Martin Zobel-Helas <zobel@debian.org>:
    - add DSA meeting 2010 in Munich (Closes: #653447)

 -- Chris Lamb <lamby@debian.org>  Tue, 03 Jan 2012 13:12:28 +0000

debian-timeline (15) unstable; urgency=low

  * Update Vcs-{Git,Browser}.
  * Add squeeze r1 point release.

 -- Chris Lamb <lamby@debian.org>  Tue, 22 Mar 2011 11:31:59 +0000

debian-timeline (14) unstable; urgency=low

  * Fix embarassing ``5.0 ("squeeze")'' typo. Thanks to Paul Wise (pabs).

 -- Chris Lamb <lamby@debian.org>  Sun, 27 Feb 2011 03:10:40 +0000

debian-timeline (13) unstable; urgency=low

  * Added squeeze release.
  * Added squeeze "era".
  * Apply contributions from Paul Wise <pabs@debian.org>:
    - lenny r{6,7,8} point releases.
    - Debian 6.0 ("squeeze") frozen.
    - Debian welcomes non-packaging contributors.
    - Frans Pop passed away.
    - Add a URL for passing away of Joel 'Espy' Klecker.
    - Debian Policy 3.9.1.
    - Bugs #600000 and #610000 reported.
  * Added FOSDEM 2011.

 -- Chris Lamb <lamby@debian.org>  Sat, 26 Feb 2011 19:04:30 +0000
